Fixes integration tests for coverage